<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_feed"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_feed" />

    <item
        android:id="@+id/navigation_malper"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_malper" />

    <item
        android:id="@+id/navigation_reels"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/nav_reels" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_messages" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
